# Gamefynx

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  main.cpp
src/common/: EmulatorCore.h  EmulatorInterface.h  InputManager.cpp  InputManager.h  emulator_interface.h
src/config/: EmulatorConfig.h  ImguiConfig.cpp  ImguiConfig.h
src/core/chip8/: Chip8.cpp  Chip8.h  chip8.cpp  chip8.h
src/core/gameboy/: GB_CPU.cpp  GB_CPU.h  GB_Joypad.cpp  GB_Joypad.h  GB_MMU.cpp  GB_MMU.h  GB_PPU.cpp  GB_PPU.h  GB_Timer.cpp  GB_Timer.h  Gameboy.cpp  Gameboy.h
src/ui/: MainWindow.cpp  MainWindow.h  ScreenRenderer.cpp  ScreenRenderer.h  Workspace.cpp  Workspace.h  mainWindow.cpp  mainWindow.h  main_window.cpp  main_window.h  screenRenderer.cpp  screenRenderer.h  screen_renderer.cpp  screen_renderer.h
src/utils/: Audio.cpp  Audio.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  file_utils.cpp  file_utils.h  logger.cpp  logger.h
